--- a/index.html
+++ b/index.html
@@ -2,18 +2,91 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
-
+		<title>Fruit Market</title>
 		<meta name="description" content="Webpage">
+		<link rel="stylesheet"
+		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+		integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+		crossorigin="anonymous">
 		<link href="stylesheet.css" rel="stylesheet">
-
 		<script src="jquery.min.js"></script>
 		<script src="script.js"></script>
 	</head>
-	
+
 	<body>
-		
-		
-		
+	<header class="jumbotron text-center">
+		<h1>Total Available Cash: <h1 class="cash-avail"></h1></h1>
+	</header>
+	<div class="container">
+		<div class="row">
+		<div class="col-md-2 apple">
+		<h2>Apples</h2>
+		<button>Buy</button>
+		<p>
+			<h3>Price: <h3 class="price">2</h3></h3>
+		</p>
+		<p>Average price:<p class="avg-price"></p></p>
+
+			<h3>Inventory:</h3>
+			<p class="inventory">
+			0
+		</p>
+	</div>
+	<div class="col-md-2 banana">
+		<h2>Bananas</h2>
+		<button>Buy</button>
+		<p>
+			<h3>Price: <h3 class="price">2</h3></h3>
+		</p>
+		<p>Average price:<p class="avg-price"></p></p>
+
+			<h3>Inventory:</h3>
+			<p class="inventory">
+		0
+		</p>
+	</div>
+		<!-- <div class="col-md-2 grape">
+		<h2>Grapes</h2>
+		<button>Buy</button>
+		<p>
+			<h3>Price: <h3 class="price">2</h3></h3>
+		</p>
+		<p>Average price:<p class="avg-price"></p></p>
+
+			<h3>Inventory:</h3>
+			<p class="inventory">
+			0
+		</p>
+	</div> -->
+		<div class="col-md-2 orange">
+		<h2>Oranges</h2>
+		<button>Buy</button>
+		<p>
+			<h3>Price: <h3 class="price">2</h3></h3>
+		</p>
+		<p>Average price:<p class="avg-price"></p></p>
+
+			<h3>Inventory:</h3>
+			<p class="inventory">
+			0
+		</p>
+	</div>
+	<div class="col-md-2 pear">
+	<h2>Pears</h2></h2>
+	<button>Buy</button>
+	<p>
+		<h3>Price: <h3 class="price">2</h3></h3>
+	</p>
+	<p>Average price:<p class="avg-price"></p></p>
+
+		<h3>Inventory:</h3>
+		<p class="inventory">
+		0
+	</p>
+</div>
+	</div>
+</div>
+
+
 	</body>
 </html>
