finished basic mode in the process of adding images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="container">
 		<div class="row">
 		<div class="col-md-2 apple">
-		<h2>Apples</h2>
+		<img src="images/apple-babies.jpg"/>
 		<button>Buy</button>
 		<p>
 			<h3>Price: <h3 class="price">2</h3></h3>
@@ -33,7 +33,7 @@
 		</p>
 	</div>
 	<div class="col-md-2 banana">
-		<h2>Bananas</h2>
+		<img src="images/bananas1.jpeg"/>
 		<button>Buy</button>
 		<p>
 			<h3>Price: <h3 class="price">2</h3></h3>
@@ -46,7 +46,7 @@
 		</p>
 	</div>
 		<!-- <div class="col-md-2 grape">
-		<h2>Grapes</h2>
+		<img src="images/grapes.jpeg"/>
 		<button>Buy</button>
 		<p>
 			<h3>Price: <h3 class="price">2</h3></h3>
@@ -59,7 +59,7 @@
 		</p>
 	</div> -->
 		<div class="col-md-2 orange">
-		<h2>Oranges</h2>
+		<img src="images/orange.jpeg"/>
 		<button>Buy</button>
 		<p>
 			<h3>Price: <h3 class="price">2</h3></h3>
@@ -72,7 +72,7 @@
 		</p>
 	</div>
 	<div class="col-md-2 pear">
-	<h2>Pears</h2></h2>
+	<img src="images/pears.jpeg"/>
 	<button>Buy</button>
 	<p>
 		<h3>Price: <h3 class="price">2</h3></h3>
