nearly done with Pro mode

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 		<div class="row">
 		<div class="col-md-2 apple">
 		<img src="images/apple-babies.jpg"/>
-		<button>Buy</button>
+		<button class="buy-button">Buy</button>
+		<button class="sell-button">Sell</button>
 		<p>
 			<h3>Price: <h3 class="price">2</h3></h3>
 		</p>
-		<p>Average price:<p class="avg-price"></p></p>
+		<h3>Average Price:<h3 class="avg-price">0</h3></h3>
 
 			<h3>Inventory:</h3>
 			<p class="inventory">
@@ -34,11 +35,12 @@
 	</div>
 	<div class="col-md-2 banana">
 		<img src="images/bananas1.jpeg"/>
-		<button>Buy</button>
+		<button class="buy-button">Buy</button>
+		<button class="sell-button">Sell</button>
 		<p>
 			<h3>Price: <h3 class="price">2</h3></h3>
 		</p>
-		<p>Average price:<p class="avg-price"></p></p>
+		<h3>Average Price:<h3 class="avg-price">0</h3></h3>
 
 			<h3>Inventory:</h3>
 			<p class="inventory">
@@ -47,11 +49,12 @@
 	</div>
 		<!-- <div class="col-md-2 grape">
 		<img src="images/grapes.jpeg"/>
-		<button>Buy</button>
+		<button class="buy-button">Buy</button>
+		<button class="sell-button">Sell</button>
 		<p>
 			<h3>Price: <h3 class="price">2</h3></h3>
 		</p>
-		<p>Average price:<p class="avg-price"></p></p>
+		<h3>Average Price:<h3 class="avg-price">0</h3></h3>
 
 			<h3>Inventory:</h3>
 			<p class="inventory">
@@ -60,11 +63,12 @@
 	</div> -->
 		<div class="col-md-2 orange">
 		<img src="images/orange.jpeg"/>
-		<button>Buy</button>
+		<button class="buy-button">Buy</button>
+		<button class="sell-button">Sell</button>
 		<p>
 			<h3>Price: <h3 class="price">2</h3></h3>
 		</p>
-		<p>Average price:<p class="avg-price"></p></p>
+		<h3>Average Price:<h3 class="avg-price">0</h3></h3>
 
 			<h3>Inventory:</h3>
 			<p class="inventory">
@@ -73,11 +77,12 @@
 	</div>
 	<div class="col-md-2 pear">
 	<img src="images/pears.jpeg"/>
-	<button>Buy</button>
+	<button class="buy-button">Buy</button>
+	<button class="sell-button">Sell</button>
 	<p>
 		<h3>Price: <h3 class="price">2</h3></h3>
 	</p>
-	<p>Average price:<p class="avg-price"></p></p>
+	<h3>Average Price:<h3 class="avg-price">0</h3></h3>
 
 		<h3>Inventory:</h3>
 		<p class="inventory">
