--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
 		crossorigin="anonymous">
 		<link href="stylesheet.css" rel="stylesheet">
-		<script src="jquery.min.js"></script>
+		<script src="jquery.js"></script>
 		<script src="script.js"></script>
 	</head>
 
